--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <header>
     <nav class="navbar">
       <div class="logo">Viren Yadav</div>
+
+      <!-- Hamburger button (only visible on mobile) -->
+      <div class="hamburger" onclick="toggleMenu()">
+        <i class="fas fa-bars"></i>
+      </div>
+
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -138,6 +144,11 @@
 
   // Start typing effect
   typeEffect();
+
+  // ===== Navbar Toggle for Mobile =====
+  function toggleMenu() {
+    document.querySelector(".nav-links").classList.toggle("active");
+  }
 </script>
 
 </body>
