--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
   <!-- ===================== NAVIGATION ===================== -->
   <header>
     <nav class="navbar">
-      <div class="logo">Viren Yadav</div>
+  <div class="logo">Viren Yadav</div>
 
-      <!-- Hamburger button (only visible on mobile) -->
-      <div class="hamburger" onclick="toggleMenu()">
-        <i class="fas fa-bars"></i>
-      </div>
+  <!-- HAMBURGER MENU BUTTON -->
+  <div class="hamburger">
+    <i class="fas fa-bars"></i>
+  </div>
 
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <ul class="nav-links">
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
   </header>
 
   <!-- ===================== MAIN CONTENT ===================== -->
@@ -150,6 +151,16 @@
     document.querySelector(".nav-links").classList.toggle("active");
   }
 </script>
+<script>
+  // Hamburger toggle script
+  const hamburger = document.querySelector(".hamburger");
+  const navLinks = document.querySelector(".nav-links");
+
+  hamburger.addEventListener("click", () => {
+    navLinks.classList.toggle("active");
+  });
+</script>
+
 
 </body>
 </html>
