Your descriptive commit message here

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
 
         <!-- Resume Buttons -->
         <div class="resume-buttons">
-          <a href="assets/resume.pdf" target="_blank" class="btn-resume"><i class="fas fa-eye"></i> View Resume</a>
-          <a href="assets/resume.pdf" download class="btn-download"><i class="fas fa-download"></i> Download Resume</a>
+          <a href="assets/image/resume.pdf" target="_blank" class="btn-resume"><i class="fas fa-eye"></i> View Resume</a>
+          <a href="assets/image/resume.pdf" download class="btn-download"><i class="fas fa-download"></i> Download Resume</a>
         </div>
 
       </div>
